# claude-knowledge-catalyst

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README-ja.md  README.md  RELEASE_NOTES.md  ckc_config.yaml  ckc_config.yaml.example  my-plan.md  pyproject.toml
.claude/: CLAUDE.md  ci-cd-infinite-loop-troubleshooting.md  classification-system.md  common-patterns.md  consideration.md  context.md  debug-log.md  development.md  first-plan.md  mypy-improvement-log.md  next_action_01.md  next_action_02.md  next_action_03.md  phase-2.5-stabilization-achievement.md  project-improvements.md  project-knowledge.md  python-package.md  roadmap.md  settings.local.json
.claude/architecture/: classification_obsidian.md  classification_system_issues.md  cli-enhancements.md  directory_structure_evolution.md  metadata_system.md  overview.md  prompt_management.md  roadmap.md  sphinx_migration_strategy.md
.claude/commands/: batch-classify.md  ckc-scan-missing-metadata.md  ckc-smart-sync  ckc-smart-sync-auto  ckc-smart-sync-dry-run  ckc-smart-sync.md  classify-file.md  clean_tempfiles.md  handoff.md  learnings.md  next_action.md  sphinx-build.md  sphinx-create.md  sphinx-update.md  test-until-pass.md
.claude/docs/: CLAUDE.md  RTD_SETUP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  maintenance.yml  pr-quality-gate.yml  publish.yml  release.yml
demo/: CLAUDE.md  README.md  cleanup.sh  demo.sh  multi_project_demo.sh  quick_demo.sh  run_demo.sh  tag_centered_demo.sh
demo/backend_team/: ckc_config.yaml
demo/ckc_project/: ckc_config.yaml
demo/enhanced_ckc_vault/: README.md  migration_report.md
demo/frontend_team/: ckc_config.yaml
demo/obsidian_vault/: API_Design_Principles.md  Code_Review_Checklist.md  DevOps_Automation.md  Machine_Learning_Pipeline.md  Python_Async_Patterns.md  React_Performance_Tips.md
docs/: conf.py  index.md  test-stabilization-v0.10.1.md
docs-legacy/design/: README.md  adaptive_system_integration.md  api_compatibility.md  architecture_analysis.md  integration_master_plan.md  migration_strategy.md  testing_strategy.md
docs/api-reference/: index.md
docs/design/: README.md  adaptive_system_integration.md  api_compatibility.md  architecture_analysis.md  hybrid_approach_integration.md  integration_master_plan.md  migration_strategy.md  testing_strategy.md
docs/developer-guide/: index.md
docs/getting-started/: index.md
docs/project-info/: index.md
docs/quick-start/: index.md
docs/user-guide/: claude-md-sync.md  core-concepts.md  index.md  obsidian-migration.md  tag-architecture.md  yake-integration.md
examples/: sample_config.yaml
tests/: __init__.py  test_ai_assistant.py.backup  test_ai_smart_classifier.py  test_analytics_knowledge.py  test_automation.py.backup  test_cli_main.py  test_cli_smart_sync.py  test_cli_usability.py  test_config.py  test_core_tag_standards.py  test_core_watcher.py  test_demo_integration.py  test_essential_features.py  test_hybrid_integration.py  test_integration_comprehensive.py  test_metadata.py  test_performance.py  test_query_builder.py.backup  test_sync_compatibility.py  test_sync_hybrid_manager.py  test_sync_hybrid_manager_simple.py  test_sync_obsidian.py  test_tag_standards.py.backup  test_templates.py  test_yake_extractor.py
(+108 files in other folders)
